; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_compressor_backing_store.c_vm_swapout_iodone.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_compressor_backing_store.c_vm_swapout_iodone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swapout_io_completion = type { i32, i32 }

@c_list_lock = common dso_local global i32 0, align 4
@vm_swapout_soc_done = common dso_local global i32 0, align 4
@c_swapout_list_head = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_swapout_iodone(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.swapout_io_completion*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.swapout_io_completion*
  store %struct.swapout_io_completion* %7, %struct.swapout_io_completion** %5, align 8
  %8 = load i32, i32* @c_list_lock, align 4
  %9 = call i32 @lck_mtx_lock_spin_always(i32 %8)
  %10 = load %struct.swapout_io_completion*, %struct.swapout_io_completion** %5, align 8
  %11 = getelementptr inbounds %struct.swapout_io_completion, %struct.swapout_io_completion* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.swapout_io_completion*, %struct.swapout_io_completion** %5, align 8
  %14 = getelementptr inbounds %struct.swapout_io_completion, %struct.swapout_io_completion* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @vm_swapout_soc_done, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* @vm_swapout_soc_done, align 4
  %17 = call i32 @thread_wakeup(i32 ptrtoint (i32* @c_swapout_list_head to i32))
  %18 = load i32, i32* @c_list_lock, align 4
  %19 = call i32 @lck_mtx_unlock_always(i32 %18)
  ret void
}

declare dso_local i32 @lck_mtx_lock_spin_always(i32) #1

declare dso_local i32 @thread_wakeup(i32) #1

declare dso_local i32 @lck_mtx_unlock_always(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
